--- a/models/config/qm9.yaml
+++ b/models/config/qm9.yaml
@@ -7,6 +7,15 @@ test_batch_size : 64
 seed : 123
 
 
+
+BasisNet:
+  emb_dim: 16
+  n_phis: 8
+  node_feat: 11
+  edge_feat: 4
+  
+  
+
 #GT
 GT_gnn:
   layers_pre_mp : 1
@@ -23,6 +32,8 @@ GT_gt:
   layers : 10
   dim_hidden : 64
   n_heads : 4
+  num_linear_emb_node: 11
+  num_linear_emb_edge: 4
 
   pna_degrees : 0
   posenc_EquivStableLapPE : False
@@ -33,7 +44,7 @@ GT_gt:
 
 GT_dataset:
   node_encoder : True
-  node_encoder_name : "BasisNe4t_PE"
+  node_encoder_name : "SAN_PE"
   node_encoder_bn : False
   edge_encoder : False
   edge_encoder_name : None
