--- a/models/config/alchemy.yaml
+++ b/models/config/alchemy.yaml
@@ -41,7 +41,7 @@ GT_gt:
 
 GT_dataset:
   node_encoder : True
-  node_encoder_name : "RRWP_PE"
+  node_encoder_name : "BasisNet_PE"
   node_encoder_bn : False
   edge_encoder : False
   edge_encoder_name : None
